--- a/LoaderClient/loaderClient.props
+++ b/LoaderClient/loaderClient.props
@@ -8,3 +8,5 @@ bootstrap.servers=127.0.0.1:9092
 linger.ms=1
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
+partitioner.class=cn.edu.ruc.realtime.partition.LoaderClientPartitionKafka
+threads.num=8
