--- a/Loader/loader.props
+++ b/Loader/loader.props
@@ -1,15 +1,21 @@
+# Logger
+log.dir=/Users/Jelly/Developer/RealTimeAnalysis/loaderLogs/
+logs=system.log, user.log
+
 # LoaderThread
 bootstrap.servers=127.0.0.1:9092
 consumer.group.id=test
 consumer.auto.commit=false
 consumer.auto.commit.interval.ms=1000
 consumer.session.timeout=30000
-consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer"
+consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+consumer.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Blocking Queue
-blocking.queue.size=256*1024
+blocking.queue.size=12288
 
 # WriterThread
-writer.block.size=6*1024;
+writer.block.size=10
 writer.full.factor=0.98
-writer.file.path=file:///home/root/result/
+writer.file.path=/Users/Jelly/Developer/RealTimeAnalysis/result
+writer.thread.num=2
