doing test, fixing bugs

--- a/config.props
+++ b/config.props
@@ -10,8 +10,8 @@ batch.size=1024
 buffer.memory=33554432
 bootstrap.servers=127.0.0.1:9092
 linger.ms=1
-key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.StringSerializer
+key.serializer=org.apache.kafka.common.serialization.LongSerializer
+value.serializer=cn.edu.ruc.realtime.utils.MessageSer
 partitioner.class=cn.edu.ruc.realtime.partition.LoaderClientPartitionKafka
 
 ## LoaderClient ThreadPool
@@ -25,8 +25,9 @@ consumer.group.id=test
 consumer.auto.commit=false
 consumer.auto.commit.interval.ms=1000
 consumer.session.timeout=30000
-consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-consumer.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+consumer.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
+consumer.value.deserializer=cn.edu.ruc.realtime.utils.MessageDer
+writer.batch.size=100
 
 ## Blocking Queue
 blocking.queue.size=12288
@@ -35,4 +36,4 @@ blocking.queue.size=12288
 writer.block.size=10
 writer.full.factor=0.98
 writer.file.path=/Users/Jelly/Developer/RealTimeAnalysis/result
-writer.thread.num=2
+writer.thread.num=1
