--- a/config.props
+++ b/config.props
@@ -6,7 +6,7 @@ logs=system.log,user.log
 ## Zookeeper
 acks=1
 retries=0
-batch.size=1024
+batch.size=10240
 buffer.memory=33554432
 bootstrap.servers=127.0.0.1:9092
 linger.ms=1
@@ -15,25 +15,33 @@ value.serializer=cn.edu.ruc.realtime.utils.MessageSer
 partitioner.class=cn.edu.ruc.realtime.partition.LoaderClientPartitionKafka
 
 ## LoaderClient ThreadPool
-thread.pool.size=8
-thread.queue.size=1000
+thread.pool.size=40
+thread.queue.size=2000
+producer.thread.num=4
 
 # Loader
 ## LoaderThread
 bootstrap.servers=127.0.0.1:9092
 consumer.group.id=test
-consumer.auto.commit=false
+consumer.auto.commit=true
 consumer.auto.commit.interval.ms=1000
 consumer.session.timeout=30000
 consumer.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 consumer.value.deserializer=cn.edu.ruc.realtime.utils.MessageDer
-writer.batch.size=100
+writer.batch.size=1000
 
 ## Blocking Queue
-blocking.queue.size=12288
+blocking.queue.size=100
 
 ## WriterThread
 writer.block.size=10
 writer.full.factor=0.98
-writer.file.path=/Users/Jelly/Developer/RealTimeAnalysis/
+writer.file.path=/Users/Jelly/Developer/RealTimeAnalysis/result/
 writer.thread.num=1
+
+# Meta
+## Database-Postgresql
+db.connection.driver.class=org.postgresql.Driver
+db.connection.user=jelly
+db.connection.pass=123456
+db.connection.url=jdbc:postgresql://localhost/meta
