--- a/config.props
+++ b/config.props
@@ -1,41 +1,40 @@
 # Log
-log.dir=/Users/Jelly/Developer/RealTimeAnalysis/
+log.dir=/home/es/logs/
 logs=system.log,user.log
 
 # LoaderClient
 ## Zookeeper
 acks=1
 retries=0
-batch.size=10240
+batch.size=112000
 buffer.memory=33554432
-bootstrap.servers=127.0.0.1:9092
+bootstrap.servers=192.168.7.12:9092,192.168.7.13:9093,192.168.7.14:9094
 linger.ms=1
 key.serializer=org.apache.kafka.common.serialization.LongSerializer
 value.serializer=cn.edu.ruc.realtime.utils.MessageSer
 partitioner.class=cn.edu.ruc.realtime.partition.LoaderClientPartitionKafka
 
 ## LoaderClient ThreadPool
-blocking.pool.size=40
+blocking.pool.size=4000
 producer.thread.num=4
 
 # Loader
 ## LoaderThread
-bootstrap.servers=127.0.0.1:9092
 consumer.group.id=test
 consumer.auto.commit=true
 consumer.auto.commit.interval.ms=1000
 consumer.session.timeout=30000
 consumer.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 consumer.value.deserializer=cn.edu.ruc.realtime.utils.MessageDer
-writer.batch.size=1000
+writer.batch.size=10000
 
 ## Loader thread blocking Queue
-thread.queue.size=100
+thread.queue.size=10000
 
 ## WriterThread
-writer.block.size=10
+writer.block.size=100
 writer.full.factor=0.98
-writer.file.path=/Users/Jelly/Developer/RealTimeAnalysis/parquet/
+writer.file.path=hdfs://192.168.7.33:9000/jelly/
 writer.thread.num=1
 
 # Meta
@@ -43,4 +42,4 @@ writer.thread.num=1
 db.connection.driver.class=org.postgresql.Driver
 db.connection.user=jelly
 db.connection.pass=123456
-db.connection.url=jdbc:postgresql://localhost/meta
+db.connection.url=jdbc:postgresql://192.168.7.12/meta
