--- a/RealTimeBenchmark/pom.xml
+++ b/RealTimeBenchmark/pom.xml
@@ -25,7 +25,12 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>2.0.0</version>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>1.6.2</version>
         </dependency>
     </dependencies>
 </project>
