--- a/config.props
+++ b/config.props
@@ -1,5 +1,5 @@
 # Log
-log.dir=/home/es/logs/
+log.dir=/Users/Jelly/Developer/RealTimeAnalysis/
 logs=system.log,user.log
 
 # LoaderClient
@@ -8,15 +8,16 @@ acks=1
 retries=0
 batch.size=112000
 buffer.memory=33554432
-bootstrap.servers=192.168.7.12:9092,192.168.7.13:9093,192.168.7.14:9094
+bootstrap.servers=localhost:9092
 linger.ms=1
 key.serializer=org.apache.kafka.common.serialization.LongSerializer
 value.serializer=cn.edu.ruc.realtime.utils.MessageSer
 partitioner.class=cn.edu.ruc.realtime.partition.LoaderClientPartitionKafka
 
 ## LoaderClient ThreadPool
+thread.pool.size=20
 blocking.pool.size=4000
-producer.thread.num=4
+producer.thread.num=16
 
 # Loader
 ## LoaderThread
@@ -30,12 +31,12 @@ consumer.value.deserializer=cn.edu.ruc.realtime.utils.MessageDer
 writer.batch.size=10000
 
 ## Loader thread blocking Queue
-thread.queue.size=10000
+blocking.queue.size=10000
 
 ## WriterThread
-writer.block.size=100
+writer.block.size=50
 writer.full.factor=0.98
-writer.file.path=hdfs://192.168.7.33:9000/jelly/
+writer.file.path=file///Users/Jelly/Developer/RealTimeAnalysis/parquet/
 writer.thread.num=1
 
 # Meta
@@ -43,4 +44,4 @@ writer.thread.num=1
 db.connection.driver.class=org.postgresql.Driver
 db.connection.user=jelly
 db.connection.pass=123456
-db.connection.url=jdbc:postgresql://192.168.7.12/meta
+db.connection.url=jdbc:postgresql://localhost/meta
