--- a/Loader/pom.xml
+++ b/Loader/pom.xml
@@ -23,6 +23,11 @@
             <version>0.9.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1212</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
@@ -103,6 +108,8 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <finalName>${artifactId}-${project.version}</finalName>
+                            <outputDirectory>${project.parent.basedir}/dist/bin</outputDirectory>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>allinone</shadedClassifierName>
                             <filters>
@@ -116,7 +123,7 @@
                                 </filter>
                             </filters>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugin.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>cn.edu.ruc.realtime.loader.LoaderTest</mainClass>
                                 </transformer>
                             </transformers>
