--- a/Loader/pom.xml
+++ b/Loader/pom.xml
@@ -124,7 +124,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>cn.edu.ruc.realtime.loader.LoaderTest</mainClass>
+                                    <mainClass>cn.edu.ruc.realtime.loader.LoaderMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
