--- a/RealTimeBenchmark/pom.xml
+++ b/RealTimeBenchmark/pom.xml
@@ -47,7 +47,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>cn.edu.ruc.realtime.benchmark.BenchmarkProducer</mainClass>
+                                    <mainClass>cn.edu.ruc.realtime.benchmark.BenchmarkQuery</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -94,6 +94,11 @@
             <groupId>net.sourceforge.argparse4j</groupId>
             <artifactId>argparse4j</artifactId>
             <version>0.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.facebook.presto</groupId>
+            <artifactId>presto-jdbc</artifactId>
+            <version>0.158-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
