--- a/RealTimeBenchmark/pom.xml
+++ b/RealTimeBenchmark/pom.xml
@@ -31,7 +31,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>BenchmarkQuery</finalName>
+                            <finalName>SparkQuery</finalName>
                             <outputDirectory>${project.parent.basedir}/dist/bin</outputDirectory>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>allinone</shadedClassifierName>
@@ -47,7 +47,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>cn.edu.ruc.realtime.benchmark.BenchmarkQuery</mainClass>
+                                    <mainClass>cn.edu.ruc.realtime.benchmark.SparkQuery</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -71,12 +71,12 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>1.6.2</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
-            <version>1.6.2</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>io.airlift.tpch</groupId>
